fixed text overlapping over footer in the tabs/item show page

--- a/app/assets/stylesheets/pages/_item_show.scss
+++ b/app/assets/stylesheets/pages/_item_show.scss
@@ -8,7 +8,7 @@
   // box-shadow: 3px 3px 3px #36506C;
   margin-bottom: 70px;
   margin-top: 50px;
-  height: 100vh;
+  height: auto !important;
 
 }
 
@@ -185,7 +185,7 @@ ul.my-tabs {
   box-shadow: 3px 3px 3px white;
   margin-bottom: 70px;
   margin-top: 50px;
-  height: 100vh;
+  height: auto !important;
   color: white;
 
 
